# frostfire

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/scripts/: compare_benchmarks.py
.github/workflows/: ci.yml
benches/: frostfire_bench.rs
src/: lib.rs  prelude.rs  utils.rs
src/core/: annealer.rs  energy.rs  mod.rs  schedule.rs  state.rs  transition.rs
src/rng/: mod.rs  seeded_rng.rs
tests/: convergence.rs  knapsack.rs  rastrigin.rs  tsp.rs
