[package]
name = "frostfire"
version = "0.1.2"
edition = "2021"
authors = ["Frostfire Team"]
description = "A modular, mathematically rigorous, performant, reusable simulated annealing optimization engine"
repository = "https://github.com/copyleftdev/frostfire"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["optimization", "simulated-annealing", "metaheuristic", "stochastic"]
categories = ["algorithms", "science", "mathematics"]
exclude = [
    "target/",
    "Cargo.lock",
    ".github/",
    "benches/",
    "tests/",
    "*.json",
    "*.md",
    "!README.md",
]

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
log = "0.4.17"

[dev-dependencies]
criterion = "0.4.0"
proptest = "1.0.0"

[[bench]]
name = "frostfire_bench"
harness = false
